spacing fixed, need to embed the instagram and website URLs

--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -19,3 +19,6 @@
     justify-content: center;
     margin: 6px 0 20px 0;
 }
+.noGap {
+    margin-left: -4px;
+}
